# kvqc2d

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  README  changelog  clean  configure.ac  format-logs.pl  kvqc2d.1  plu-autoupdate-from-stinfosys.in  plu-update-from-stinfosys  singlecheck.sh  singlecheckC.sh  stinfosys-vipp-pluviometer.pl  version.sh
debian/: changelog  (+23 more)
src/: Akima.cc  Akima.h  AlgorithmConfig.cc  AlgorithmConfig.h  AlgorithmDispatcher.cc  AlgorithmDispatcher.h  AlgorithmHelpers.cc  AlgorithmHelpers.h  AlgorithmRunner.cc  AlgorithmRunner.h  Broadcaster.h  CMakeLists.txt  CheckedDataHelper.cc  CheckedDataHelper.h  ConfigParser.cc  ConfigParser.h  CorrelatedNeighborInterpolator.cc  CorrelatedNeighborInterpolator.h  DBConstraints.cc  DBConstraints.h  DBConstraintsBase.h  DBInterface.cc  DBInterface.h  DataAccessSQLQueries.cc  DataAccessSQLQueries.h  FlagChange.cc  FlagChange.h  FlagMatch.cc  FlagMatch.h  FlagMatcher.cc  FlagMatcher.h  FlagPattern.cc  FlagPattern.h  FlagPatterns.cc  FlagPatterns.h  FlagSet.cc  FlagSet.h  FlagUpdate.cc  FlagUpdate.h  FlagUpdater.cc  (+69 more)
src/Reference/: 112.cfg  173.cfg  211-SingleLinear.cfg  211.cfg  212.cfg  213.cfg  215.cfg  262.cfg  DipTest.cfg  GeneralSignalMissing.cfg  LOG  LongerGap.cfg  MissingLinear.cfg  OPTIONS_TABLE  Plumatic.cfg  ProcessUnit.cfg  Redis_FlagUpdate.cfg  Redistribution.cfg  TEST3036.cfg  TestParVal.txt  eps_gant.pl  flagtest.cfg  options_table.pl
src/Reference/FlagAnalysis/: Makefile  Makefile.in  config.status  configure  configure.ac  m.out  make.out  simple_configure.ac  topcon.ac
src/algorithms/: AggregatorLimits.cc  AggregatorLimits.h  AkimaSpline.cc  AkimaSpline.h  AkimaTest.cc  AlgoCHECK  BasicStatistics.h  DataUpdate.cc  DataUpdate.h  DipTest.cc  DipTest2.cc  DipTestAlgorithm.cc  DipTestAlgorithm.h  Distribute.cc  Distribute.h  FlagTester.cc  Flags.txt  GapInterpolate.cc  GapInterpolationAlgorithm.cc  GapInterpolationAlgorithm.h  GetStationParam.cc  GetStationParam.h  Interpolate.cc  NeighborsDistance2.cc  NeighborsDistance2.h  ParseParValFile.cc  ParseParValFile.h  Plumatic.cc  Plumatic.h  PlumaticAlgorithm.cc  PlumaticAlgorithm.h  Process4D.cc  ProcessPlumatic.cc  ProcessPlumatic.h  ProcessRedistribution.cc  ProcessRedistribution.h  ProcessSpaceCheck.cc  ProcessUNIT.logic  ProcessUnitT.cc  ProcessVariability.cc  (+27 more)
src/helpers/: Akima.cc  Akima.h  AlgorithmHelpers.cc  AlgorithmHelpers.h  CMakeLists.txt  ConfigParser.cc  ConfigParser.h  FormulaUU.cc  FormulaUU.h  Helpers.cc  Helpers.h  Makefile.am  StationParamParser.cc  StationParamParser.h  WeightedMean.cc  WeightedMean.h  mathutil.cc  mathutil.h  stringutil.cc  stringutil.h  timeutil.cc  timeutil.h
src/interpolation/: CMakeLists.txt  CorrelatedNeighborInterpolator.cc  CorrelatedNeighborInterpolator.h  GapData.cc  GapData.hh  GapInterpolationAlgorithm.cc  GapInterpolationAlgorithm.h  GapUpdate.cc  GapUpdate.hh  Instrument.cc  Instrument.h  InterpolationData.cc  InterpolationData.h  InterpolationError.hh  Interpolator.cc  InterpolatorUU.cc  KvalobsData.cc  KvalobsData.h  KvalobsDataFilter.cc  KvalobsDataFilter.h  KvalobsDataList.h  KvalobsDataUU.cc  KvalobsDataUU.h  KvalobsMinMaxData.cc  KvalobsMinMaxData.h  KvalobsNeighborData.cc  KvalobsNeighborData.h  Makefile.am  MinMaxInterpolator.cc  MinMaxInterpolator.h  MinMaxReconstruction.cc  MinMaxReconstruction.h  NeighborInterpolation.cc  NeighborInterpolation.h  NeighborInterpolator.cc  NeighborInterpolator.h  ParameterInfo.cc  ParameterInfo.h  SimpleData.cc  SimpleData.h  (+4 more)
src/statisticalmean/: AccumulatedFloat.h  AccumulatedQuartiles.h  AccumulatedValue.cc  AccumulatedValue.h  Accumulator.cc  Accumulator.h  AccumulatorMeanOrSum.cc  AccumulatorMeanOrSum.h  AccumulatorQuartiles.cc  AccumulatorQuartiles.h  CMakeLists.txt  Checker.cc  Checker.h  CheckerMeanOrSum.cc  CheckerMeanOrSum.h  CheckerQuartiles.cc  CheckerQuartiles.h  DailyValueExtractor.cc  DailyValueExtractor.h  DayMean.cc  DayMean.h  DayMeanExtractor.cc  DayMeanExtractor.h  DayValue.cc  DayValue.h  DayValueExtractor.cc  DayValueExtractor.h  Factory.cc  Factory.h  Makefile.am  MeanFactory.cc  MeanFactory.h  QuartilesFactory.cc  QuartilesFactory.h  StatisticalMean.cc  StatisticalMean.h  SumFactory.cc  SumFactory.h
src/test/: make.mk
test/: AkimaTest.cc  AlgorithmConfigTest.cc  CMakeLists.txt  ConfigParserTest.cc  CorrelatedNeighborInterpolatorTest.cc  FlagChangeTest.cc  FlagMatchTest.cc  FlagMatcherTest.cc  FlagPatternTest.cc  FlagPatternsTest.cc  FlagSetTest.cc  FlagUpdateTest.cc  FlagUpdaterTest.cc  FormulaUUTest.cc  HelpersTest.cc  Makefile.am  ReadProgramOptionsTest.cc  Test.cc  TestQc2D.cc  TestQc2D.h  dummy-kvserviced.cc  test_main.cc
test/algorithms/: AggregatorLimitsTest.cc  AkimaSplineTest.cc  AkimaSplineTest.h  AlgorithmHelpersTest.cc  AlgorithmTestBase.cc  AlgorithmTestBase.h  DataUpdateTest.cc  DipTestTest.cc  GapInterpolationTest.cc  PlumaticTest.cc  RedistributionTest.cc  SingleLinearTest.cc  StatisticalMeanTest.cc  TestBroadcaster.cc  TestBroadcaster.h  TestDB.cc  TestDB.h  TestData.cc  TestData.h  TestNotifier.cc  TestNotifier.h  build_daymeans_110.py  build_daymeans_212.py
test/interpolation/: GIT_DoNotSetMaxTo100.cc  GIT_DoNotSetMinTo80.cc  GIT_FluctuationSize1.cc  GIT_FluctuationSize2.cc  GIT_GapInMultiplePar.cc  GIT_InterpolationOutsideMinMax.cc  GIT_MinMaxTooFar.cc  GIT_MissingTASomeTAXN.cc  GIT_NoInterpolationAtEnd.cc  GIT_OnlyMissing.cc  GIT_Overwritten.cc  GIT_RABucketEmptied.cc  GIT_SingleMissingTAXN.cc  GIT_TAGroup.cc  GIT_TAInterpolatedNeighbors.cc  GIT_TAInterpolatedSeries.cc  GIT_UUBecomes0WithoutNeighbors.cc  GIT_UUBecomes0WithoutNieghbors.cc  GIT_UUFailed.cc  GIT_UUGroup.cc  GIT_UUNoJump1.cc  GIT_UUSeries.cc  GIT_VeryLittleSnow.cc  GIT_repro_19940.cc  GIT_reproduce_kvalobs_18230.cc  GIT_reproduce_kvalobs_18950.cc  GIT_reproduce_kvalobs_32060.cc  GIT_reproduce_kvalobs_3290.cc  GIT_reproduce_kvalobs_68290.cc  GIT_reproduce_kvalobs_76926.cc  GIT_reproduce_kvalobs_99740.cc  GIT_test1.cc  GapInterpolationTestBase.cc  GapInterpolationTestBase.hh  data_reproduce_kvalobs_18230.cc  data_reproduce_kvalobs_68290.cc
(+65 files in other folders)
